--- a/src/components/product-card/product-card.styles.scss
+++ b/src/components/product-card/product-card.styles.scss
@@ -11,6 +11,7 @@
     height: 95%;
     object-fit: cover;
     margin-bottom: 5px;
+    border: 1px solid black;
   }
 
   button {
@@ -49,3 +50,4 @@
     }
   }
 }
+
